Initial updates, added symbols, abbreviations

--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,14 @@ TODO
 \listoftables
 \lstlistoflistings
 
+\chapter*{List of Symbols}\label{ch:symbols}
+\addcontentsline{toc}{chapter}{List of Symbols}
+\input{tex/symbols}
+
+\chapter*{List of Abbreviations}\label{ch:abbreviations}
+\addcontentsline{toc}{chapter}{List of Abbreviations}
+\input{tex/abbreviations}
+
 \cleardoublepage
 
 \pagenumbering{arabic}
