--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,3 @@
-% ── Advisor Papers ────────────────────────────────────────────
-
 @inproceedings{wu2023chase-nccl,
   author    = {Wu, Xinzhe and Di~Napoli, Edoardo},
   title     = {Advancing the distributed Multi-{GPU} {ChASE} library through
@@ -46,8 +44,6 @@
   year   = {2019},
 }
 
-% ── NVIDIA Architecture ───────────────────────────────────────
-
 @manual{nvidia2020a100,
   author = {{NVIDIA Corporation}},
   title  = {{NVIDIA} {A100} Tensor Core {GPU} Architecture},
@@ -69,11 +65,6 @@
   note   = {\url{https://docs.nvidia.com/cuda/cuda-c-programming-guide/}},
 }
 
-% ── Tensor Networks ───────────────────────────────────────────
-% TODO: fill in once advisors point you to the right references
-
-% ── GPU Libraries ─────────────────────────────────────────────
-
 @misc{cutensor,
   author = {{NVIDIA Corporation}},
   title  = {{cuTENSOR}: A High-Performance Tensor Primitives Library},
@@ -86,4 +77,20 @@
   title  = {{cuBLAS} Library},
   year   = {2024},
   note   = {\url{https://developer.nvidia.com/cublas}},
+}
+
+@misc{cublasdx,
+  author = {{NVIDIA Corporation}},
+  title  = {{cuBLASDx}: Device Side {BLAS} Extensions},
+  year   = {2025},
+  note   = {\url{https://docs.nvidia.com/cuda/cublasdx/}},
+}
+
+@inproceedings{springer2017tensor,
+  author    = {Springer, Paul and Su, Tong and Kolda, Tamara G.},
+  title     = {Tensor Contractions with Extended {BLAS} Kernels on {CPU} and {GPU}},
+  booktitle = {IEEE 24th International Conference on High Performance Computing (HiPC)},
+  year      = {2017},
+  publisher = {IEEE},
+  note      = {\url{https://research.nvidia.com/sites/default/files/pubs/2017-10_Tensor-Contractions-with/tensors_hipc.pdf}},
 }
