--- a/tex/abbreviations.tex
+++ b/tex/abbreviations.tex
@@ -7,7 +7,8 @@
   HBM     & High Bandwidth Memory \\
   HPC     & High Performance Computing \\
   MPI     & Message Passing Interface \\
-  MPS     & Matrix Product State \\
+  MPS     & Matrix Product State (tensor networks) \\
+  MPS     & Multi-Process Service (Nvida CUDA) \\
   SM      & Streaming Multiprocessor \\
   TN      & Tensor Network \\
 \end{tabular}
