--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -116,7 +116,8 @@
 
 \newcommand{\tensor}[1]{\mathcal{#1}}
 \newcommand{\mat}[1]{\mathbf{#1}}
-\newcommand{\vect}[1]{\mathbf{#1}}
+\usepackage{esvect}
+\newcommand{\vect}[1]{\vv{#1}}
 
 \hypersetup{
   pdftitle={GPU-Accelerated Tensor Network Algorithms},
