Adding more content to background

--- a/references.bib
+++ b/references.bib
@@ -94,3 +94,41 @@
   publisher = {IEEE},
   note      = {\url{https://research.nvidia.com/sites/default/files/pubs/2017-10_Tensor-Contractions-with/tensors_hipc.pdf}},
 }
+
+@misc{nvidia2020gtc-ampere,
+author       = {Ramirez, Ronny and Hsu, William},
+title        = {Optimizing Applications for {NVIDIA} {Ampere} {GPU} Architecture},
+howpublished = {GTC 2020, Session S21819},
+year         = {2020},
+note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc/2020/presentations/s21819-optimizing-applications-for-nvidia-ampere-gpu-architecture.pdf}},
+}
+
+@standard{ieee754-2019,
+  author    = {{IEEE}},
+  title     = {{IEEE} Standard for Floating-Point Arithmetic},
+  number    = {754-2019},
+  year      = {2019},
+  publisher = {IEEE},
+  doi       = {10.1109/IEEESTD.2019.8766229},
+}
+
+@inproceedings{kalamkar2019bfloat16,
+  author    = {Kalamkar, Dhiraj and Mudigere, Dheevatsa and Mellempudi,
+               Naveen and Das, Dipankar and Banerjee, Kunal and
+               Avancha, Sasikanth and Vooturi, Dharma Teja and
+               Jammalamadaka, Nataraj and Huang, Jianyu and
+               Yuen, Hector and others},
+  title     = {A Study of {BFLOAT16} for Deep Learning Training},
+  booktitle = {arXiv preprint arXiv:1905.12322},
+  year      = {2019},
+}
+
+@article{higham2022mixed,
+  author  = {Higham, Nicholas J. and Mary, Theo},
+  title   = {Mixed Precision Algorithms in Numerical Linear Algebra},
+  journal = {Acta Numerica},
+  volume  = {31},
+  pages   = {347--414},
+  year    = {2022},
+  doi     = {10.1017/S0962492922000022},
+}
