Added NUMA hierarchy images and so on

--- a/main.tex
+++ b/main.tex
@@ -63,6 +63,9 @@ TODO
 \nocite{*}
 \bibliography{references}
 
+\chapter*{Repro}\label{ch:irepro}
+\input{tex/repro}
+
 \appendix
 \chapter{Supplementary Benchmarks}\label{app:benchmarks}
 TODO
