Restructured into more granular .tex files

--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,10 @@ TODO
 \addcontentsline{toc}{chapter}{List of Abbreviations}
 \input{tex/abbreviations}
 
+\chapter*{Glossary}\label{ch:glossary}
+\addcontentsline{toc}{chapter}{Glossary}
+\input{tex/glossary}
+
 \cleardoublepage
 
 \pagenumbering{arabic}
