--- a/tex/abbreviations.tex
+++ b/tex/abbreviations.tex
@@ -1,14 +1,30 @@
 % tex/abbreviations.tex
 \begin{tabular}{@{}ll@{}}
-  BLAS    & Basic Linear Algebra Subprograms \\
-  DFT     & Density Functional Theory \\
-  GEMM    & General Matrix Multiply \\
-  GPU     & Graphics Processing Unit \\
-  HBM     & High Bandwidth Memory \\
-  HPC     & High Performance Computing \\
-  MPI     & Message Passing Interface \\
-  MPS     & Matrix Product State (tensor networks) \\
-  MPS     & Multi-Process Service (Nvida CUDA) \\
-  SM      & Streaming Multiprocessor \\
-  TN      & Tensor Network \\
+  BF16       & Brain Floating Point (16-bit) \\
+  BLAS       & Basic Linear Algebra Subprograms \\
+  CCX        & Core Complex (AMD) \\
+  CCD        & Core Complex Die (AMD) \\
+  CUDA       & Compute Unified Device Architecture \\
+  DFT        & Density Functional Theory \\
+  DMRG       & Density Matrix Renormalization Group \\
+  FMA        & Fused Multiply-Add \\
+  FP8/16/32/64 & IEEE 754 Quarter/Half/Single/Double Precision \\
+  GEMM       & General Matrix Multiply \\
+  GPU        & Graphics Processing Unit \\
+  HBM        & High Bandwidth Memory \\
+  HPC        & High Performance Computing \\
+  MPI        & Message Passing Interface \\
+  MPS        & Matrix Product State (tensor networks) \\
+  MPS        & Multi-Process Service (NVIDIA CUDA) \\
+  NUMA       & Non-Uniform Memory Access \\
+  NVLink     & NVIDIA GPU Interconnect \\
+  PCIe       & Peripheral Component Interconnect Express \\
+  SFU        & Special Function Unit \\
+  SIMD       & Single Instruction, Multiple Data \\
+  SIMT       & Single Instruction, Multiple Threads \\
+  SM         & Streaming Multiprocessor \\
+  SVD        & Singular Value Decomposition \\
+  TF32       & TensorFloat-32 \\
+  TN         & Tensor Network \\
+  ULP        & Unit in the Last Place \\
 \end{tabular}
