Updated the fp discussion, started discussio non the kerlen launch setup

--- a/references.bib
+++ b/references.bib
@@ -132,3 +132,24 @@ note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc
   year    = {2022},
   doi     = {10.1017/S0962492922000022},
 }
+
+@misc{nvidia-nsight-latency,
+  author       = {Purnomo, Budirijanto},
+  title        = {Understanding the Visualization of Overhead and Latency in
+                  {NVIDIA} {Nsight} Systems},
+  howpublished = {NVIDIA Technical Blog},
+  year         = {2024},
+  note         = {\url{https://developer.nvidia.com/blog/understanding-the-visualization-of-overhead-and-latency-in-nsight-systems/}},
+}
+
+@inproceedings{gilman2020placement,
+  author    = {Gilman, Elijah and Walls, Samuel and Merritt, Alexander
+               and Ward, Bryan C.},
+  title     = {Demystifying the Placement Policies of the {NVIDIA} {GPU}
+               Thread Block Scheduler},
+  booktitle = {Proceedings of the International Conference on Real-Time
+               Networks and Systems (RTNS)},
+  year      = {2020},
+  publisher = {ACM},
+  note      = {\url{https://cake.wpi.edu/assets/papers/gilman20_performance.pdf}},
+}
