Significant refactorign, added much more visualisations

--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
   a4paper,
   12pt,
   twoside,
-  openright,
+  open=any,
   bibliography=totoc,
   listof=totoc
 ]{scrreprt}
@@ -41,7 +41,7 @@ TODO
 \addcontentsline{toc}{chapter}{Glossary}
 \input{tex/glossary}
 
-\cleardoublepage
+\clearpage
 
 \pagenumbering{arabic}
 
@@ -74,7 +74,7 @@ TODO
 \chapter{Supplementary Benchmarks}\label{app:benchmarks}
 TODO
 
-\cleardoublepage
+\clearpage
 \chapter*{Declaration of Authorship}
 \addcontentsline{toc}{chapter}{Declaration of Authorship}
 I hereby declare that I have created this work completely on my own and used
