--- a/references.bib
+++ b/references.bib
@@ -103,7 +103,7 @@ year         = {2020},
 note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc/2020/presentations/s21819-optimizing-applications-for-nvidia-ampere-gpu-architecture.pdf}},
 }
 
-@standard{ieee754-2019,
+@misc{ieee754-2019,
   author    = {{IEEE}},
   title     = {{IEEE} Standard for Floating-Point Arithmetic},
   number    = {754-2019},
@@ -152,4 +152,66 @@ note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc
   year      = {2020},
   publisher = {ACM},
   note      = {\url{https://cake.wpi.edu/assets/papers/gilman20_performance.pdf}},
+}
+
+@article{menczer2023massive,
+  author  = {Menczer, Tamas and Legeza, Ors and others},
+  title   = {Massively parallel tensor network state algorithms on {CPU-GPU}
+             architectures},
+  journal = {arXiv preprint arXiv:2305.05581},
+  year    = {2023},
+  note    = {\url{https://arxiv.org/abs/2305.05581}},
+}
+
+@article{menczer2023nonabelian,
+  author  = {Menczer, Tamas and Legeza, Ors and others},
+  title   = {Massively parallel implementation and approaches to simulate
+             non-{A}belian quantum lattice models},
+  journal = {arXiv preprint arXiv:2309.16724},
+  year    = {2023},
+  note    = {\url{https://arxiv.org/abs/2309.16724}},
+}
+
+@article{menczer2024efficient-dmrg-gpu,
+  author  = {Menczer, Tamas and Legeza, Ors and others},
+  title   = {Efficient implementation and tuning ideas of future real-space
+             parallel {DMRG} calculations based on mixed precision and tensor
+             core acceleration},
+  journal = {arXiv preprint arXiv:2407.07411},
+  year    = {2024},
+  note    = {\url{https://arxiv.org/abs/2407.07411}},
+}
+
+@article{krinitsin2025ttn-ed,
+  author  = {Krinitsin, Aleksei V. and Rizzi, Matteo and Waintal, Xavier},
+  title   = {Benchmarking tree tensor network and exact diagonalization methods
+             on spin-1/2 and spin-1 models with local operator sums},
+  journal = {arXiv preprint arXiv:2505.07612},
+  year    = {2025},
+  note    = {\url{https://arxiv.org/abs/2505.07612}},
+}
+
+@article{zhou2020limits,
+  author  = {Zhou, Shangnan and Stoudenmire, E. Miles and Waintal, Xavier},
+  title   = {What Limits the Simulation of Quantum Computers?},
+  journal = {Physical Review X},
+  volume  = {10},
+  number  = {4},
+  pages   = {041038},
+  year    = {2020},
+  doi     = {10.1103/PhysRevX.10.041038},
+  note    = {\url{https://arxiv.org/abs/2002.07730}},
+}
+
+@article{ayral2023dmrg-circuit-fidelity,
+  author  = {Ayral, Thomas and others},
+  title   = {Density Matrix Renormalization Group Algorithm for Simulating
+             Quantum Circuits with a Finite Fidelity},
+  journal = {PRX Quantum},
+  volume  = {4},
+  number  = {3},
+  pages   = {030307},
+  year    = {2023},
+  doi     = {10.1103/PRXQuantum.4.030307},
+  note    = {\url{https://arxiv.org/abs/2302.01941}},
 }
