Improved the slurm scripts

--- a/references.bib
+++ b/references.bib
@@ -103,6 +103,27 @@ year         = {2020},
 note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc/2020/presentations/s21819-optimizing-applications-for-nvidia-ampere-gpu-architecture.pdf}},
 }
 
+@manual{nvidia-ampere-tuning-guide,
+  author = {{NVIDIA Corporation}},
+  title  = {{NVIDIA} Ampere {GPU} Architecture Tuning Guide},
+  year   = {2025},
+  note   = {\url{https://docs.nvidia.com/cuda/ampere-tuning-guide/index.html}},
+}
+
+@manual{nvidia-cuda-best-practices,
+  author = {{NVIDIA Corporation}},
+  title  = {{CUDA} {C}++ Best Practices Guide},
+  year   = {2025},
+  note   = {\url{https://docs.nvidia.com/cuda/cuda-c-best-practices-guide/}},
+}
+
+@manual{nvidia-nsight-compute-profiling-guide,
+  author = {{NVIDIA Corporation}},
+  title  = {{NVIDIA} Nsight Compute Profiling Guide},
+  year   = {2025},
+  note   = {\url{https://docs.nvidia.com/nsight-compute/ProfilingGuide/index.html}},
+}
+
 @misc{ieee754-2019,
   author    = {{IEEE}},
   title     = {{IEEE} Standard for Floating-Point Arithmetic},
@@ -156,8 +177,8 @@ note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc
 
 @article{menczer2023massive,
   author  = {Menczer, Tamas and Legeza, Ors and others},
-  title   = {Massively parallel tensor network state algorithms on {CPU-GPU}
-             architectures},
+  title   = {Massively Parallel Tensor Network State Algorithms on Hybrid
+             {CPU-GPU} Based Architectures},
   journal = {arXiv preprint arXiv:2305.05581},
   year    = {2023},
   note    = {\url{https://arxiv.org/abs/2305.05581}},
@@ -165,8 +186,9 @@ note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc
 
 @article{menczer2023nonabelian,
   author  = {Menczer, Tamas and Legeza, Ors and others},
-  title   = {Massively parallel implementation and approaches to simulate
-             non-{A}belian quantum lattice models},
+  title   = {Boosting the effective performance of massively parallel tensor
+             network state algorithms on hybrid {CPU-GPU} based architectures
+             via non-{A}belian symmetries},
   journal = {arXiv preprint arXiv:2309.16724},
   year    = {2023},
   note    = {\url{https://arxiv.org/abs/2309.16724}},
@@ -174,9 +196,9 @@ note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc
 
 @article{menczer2024efficient-dmrg-gpu,
   author  = {Menczer, Tamas and Legeza, Ors and others},
-  title   = {Efficient implementation and tuning ideas of future real-space
-             parallel {DMRG} calculations based on mixed precision and tensor
-             core acceleration},
+  title   = {Parallel implementation of the Density Matrix Renormalization
+             Group method achieving a quarter petaFLOPS performance on a single
+             {DGX-H100} {GPU} node},
   journal = {arXiv preprint arXiv:2407.07411},
   year    = {2024},
   note    = {\url{https://arxiv.org/abs/2407.07411}},
@@ -184,8 +206,8 @@ note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc
 
 @article{krinitsin2025ttn-ed,
   author  = {Krinitsin, Aleksei V. and Rizzi, Matteo and Waintal, Xavier},
-  title   = {Benchmarking tree tensor network and exact diagonalization methods
-             on spin-1/2 and spin-1 models with local operator sums},
+  title   = {Time evolution of the quantum Ising model in two dimensions using
+             tree tensor networks},
   journal = {arXiv preprint arXiv:2505.07612},
   year    = {2025},
   note    = {\url{https://arxiv.org/abs/2505.07612}},
