Lots of restructuring

--- a/references.bib
+++ b/references.bib
@@ -95,6 +95,56 @@
   note      = {\url{https://research.nvidia.com/sites/default/files/pubs/2017-10_Tensor-Contractions-with/tensors_hipc.pdf}},
 }
 
+@misc{boehm2022cuda-mmm,
+  author = {Boehm, Simon},
+  title  = {How to Optimize a CUDA Matmul Kernel for cuBLAS-like Performance: a Worklog},
+  year   = {2022},
+  note   = {\url{https://siboehm.com/articles/22/CUDA-MMM}},
+}
+
+@article{white1992dmrg,
+  author  = {White, Steven R.},
+  title   = {Density Matrix Formulation for Quantum Renormalization Groups},
+  journal = {Physical Review Letters},
+  volume  = {69},
+  number  = {19},
+  pages   = {2863--2866},
+  year    = {1992},
+  doi     = {10.1103/PhysRevLett.69.2863},
+}
+
+@article{white1993dmrg,
+  author  = {White, Steven R.},
+  title   = {Density-Matrix Algorithms for Quantum Renormalization Groups},
+  journal = {Physical Review B},
+  volume  = {48},
+  number  = {14},
+  pages   = {10345--10356},
+  year    = {1993},
+  doi     = {10.1103/PhysRevB.48.10345},
+}
+
+@article{schollwock2011dmrg,
+  author  = {Schollw\"ock, Ulrich},
+  title   = {The Density-Matrix Renormalization Group in the Age of Matrix Product States},
+  journal = {Annals of Physics},
+  volume  = {326},
+  number  = {1},
+  pages   = {96--192},
+  year    = {2011},
+  doi     = {10.1016/j.aop.2010.09.012},
+}
+
+@article{orus2014practical-intro-tn,
+  author  = {Orus, Roman},
+  title   = {A Practical Introduction to Tensor Networks: Matrix Product States and Projected Entangled Pair States},
+  journal = {Annals of Physics},
+  volume  = {349},
+  pages   = {117--158},
+  year    = {2014},
+  doi     = {10.1016/j.aop.2014.06.013},
+}
+
 @misc{nvidia2020gtc-ampere,
 author       = {Ramirez, Ronny and Hsu, William},
 title        = {Optimizing Applications for {NVIDIA} {Ampere} {GPU} Architecture},
@@ -122,6 +172,60 @@ note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc
   title  = {{NVIDIA} Nsight Compute Profiling Guide},
   year   = {2025},
   note   = {\url{https://docs.nvidia.com/nsight-compute/ProfilingGuide/index.html}},
+}
+
+@manual{nvidia-nsight-systems-user-guide,
+  author = {{NVIDIA Corporation}},
+  title  = {{NVIDIA} Nsight Systems User Guide},
+  year   = {2025},
+  note   = {\url{https://docs.nvidia.com/nsight-systems/UserGuide/index.html}},
+}
+
+@manual{nvidia-smi-doc,
+  author = {{NVIDIA Corporation}},
+  title  = {{NVIDIA} System Management Interface ({nvidia-smi})},
+  year   = {2025},
+  note   = {\url{https://docs.nvidia.com/deploy/nvidia-smi/index.html}},
+}
+
+@manual{spec-cpu2017-runrules,
+  author = {{SPEC Open Systems Group}},
+  title  = {{SPEC} {CPU}2017 Run and Reporting Rules},
+  year   = {2021},
+  note   = {\url{https://www.spec.org/cpu2017/Docs/runrules.html}},
+}
+
+@inproceedings{kalibera2013rigorous,
+  author    = {Kalibera, Tomas and Jones, Richard},
+  title     = {Rigorous Benchmarking in Reasonable Time},
+  booktitle = {Proceedings of the International Symposium on Memory Management (ISMM)},
+  year      = {2013},
+  pages     = {63--74},
+  publisher = {ACM},
+  doi       = {10.1145/2464157.2464160},
+}
+
+@inproceedings{mytkowicz2009wrongdata,
+  author    = {Mytkowicz, Todd and Diwan, Amer and Hauswirth, Matthias and
+               Sweeney, Peter F.},
+  title     = {Producing Wrong Data Without Doing Anything Obviously Wrong!},
+  booktitle = {Proceedings of the International Conference on Architectural
+               Support for Programming Languages and Operating Systems (ASPLOS)},
+  year      = {2009},
+  pages     = {265--276},
+  publisher = {ACM},
+  doi       = {10.1145/1508284.1508275},
+}
+
+@article{fleming1986geomean,
+  author  = {Fleming, Philip J. and Wallace, John J.},
+  title   = {How Not to Lie with Statistics: The Correct Way to Summarize Benchmark Results},
+  journal = {Communications of the ACM},
+  volume  = {29},
+  number  = {3},
+  pages   = {218--221},
+  year    = {1986},
+  doi     = {10.1145/5666.5673},
 }
 
 @misc{ieee754-2019,
@@ -152,6 +256,13 @@ note         = {\url{https://developer.download.nvidia.com/video/gputechconf/gtc
   pages   = {347--414},
   year    = {2022},
   doi     = {10.1017/S0962492922000022},
+}
+
+@book{hockney1988parallel,
+  author    = {Hockney, R. W. and Jesshope, C. R.},
+  title     = {Parallel Computers 2: Architecture, Programming and Algorithms},
+  publisher = {Adam Hilger},
+  year      = {1988},
 }
 
 @misc{nvidia-nsight-latency,
