--- a/references.bib
+++ b/references.bib
@@ -148,6 +148,20 @@
   note   = {\url{https://developer.nvidia.com/blog/nvidia-ampere-architecture-in-depth/}},
 }
 
+@misc{anandtech2020tsmc-n5,
+  author = {Frumusanu, Andrei},
+  title  = {{TSMC} Details Its {N5} Process Technology: Performance, Density, and Defect Improvements},
+  year   = {2020},
+  note   = {\url{https://www.anandtech.com/show/16028/tsmc-details-n5}},
+}
+
+@misc{tomshardware2024tsmc-defect-density,
+  author = {Mellor, Chris},
+  title  = {{Intel} says {TSMC} 2nm defect density better than 3nm, 5nm, and 7nm at same stage},
+  year   = {2024},
+  note   = {\url{https://www.tomshardware.com/tech-industry/intel-says-tsmc-2nm-defect-density-better-than-3nm-5nm-and-7nm-at-same-stage}},
+}
+
 @article{white1992dmrg,
   author  = {White, Steven R.},
   title   = {Density Matrix Formulation for Quantum Renormalization Groups},
